--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>react-tutorial</title>
-    
-    <script type="module" crossorigin src="/assets/index.b35c01e0.js"></script>
-    <link rel="stylesheet" href="/assets/index.938b31d9.css">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <h1>日本大学文理学部情報科学科<br> 
         Webプログラミングの演習課題</h1>
     <h2>5421044 山下弘貴</h2>
     <div id="content"></div>
-    
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
